k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ps-store
  labels:
    app.kubernetes.io/name: ps-store
    app.kubernetes.io/part-of: ps-store
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
  annotations:
    kubernetes.io/description: "PlayStation Store microservices (frontend + 3 backends + Postgres)"
