k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ps-store
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: psstore.local
      http:
        paths:
          - path: /api/games
            pathType: Prefix
            backend:
              service:
                name: game-catalog-service
                port:
                  number: 8001
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: game-catalog-service
                port:
                  number: 8001
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/wishlist
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/library
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8003
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
